fix: align Drawer with detroit updates

--- a/src/overlays/Drawer.scss
+++ b/src/overlays/Drawer.scss
@@ -1,5 +1,7 @@
 .drawer {
   --body-height: inherit;
+  --content-padding: var(--bloom-s8) var(--bloom-s4) var(--bloom-s4) var(--bloom-s4);
+  --content-height: inherit;
   @apply flex;
   @apply flex-col;
   @apply bg-gray-200;
@@ -99,10 +101,9 @@
 }
 
 .drawer__content {
+  padding: var(--content-padding);
+  height: var(--content-height);
   @apply m-auto;
-  @apply px-4;
-  @apply pt-8;
-  @apply pb-4;
   @apply overflow-y-visible;
 }
 
